<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Portada">
    <item
        android:id="@+id/hoteles"
        android:title="@string/hoteles"
        android:orderInCategory="100" app:showAsAction="never"

        />
    <item
        android:id="@+id/restaurantes"
        android:title="@string/restaurantes"
        android:orderInCategory="100" app:showAsAction="never"
        />
    <item
        android:id="@+id/bares"
        android:title="@string/bares"
        android:orderInCategory="100" app:showAsAction="never"
        />
    <item
        android:id="@+id/turisticos"
        android:title="@string/turisticos"
        android:orderInCategory="100" app:showAsAction="never"
        />
    <item
        android:id="@+id/demografia"
        android:title="@string/demografia"
        android:orderInCategory="100" app:showAsAction="never"
        />
    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:orderInCategory="100" app:showAsAction="never"
        />
</menu>
