<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    style="@style/estilo3"

    >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        style="@style/estilo3"

        >
        <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/habitantes"
            android:textSize="20dp"
            style="@style/estilo3"
        />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/rural"
            android:textSize="20dp"
            style="@style/estilo3"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/urbana"
            android:textSize="20dp"
            style="@style/estilo3"
            />
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/fundacion"
            android:textSize="20dp"
            style="@style/estilo3"
            />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/clima"
            android:textSize="20dp"
            style="@style/estilo3"

            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/altitud"
            android:textSize="20dp"
            style="@style/estilo3"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/superficie"
            android:textSize="20dp"
            style="@style/estilo3"
            />

    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="2"
        style="@style/estilo3"

        >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:src="@drawable/escudo"
            style="@style/estilo3"
            />


    </LinearLayout>


</LinearLayout>